--- a/Responsive Web Design/Tribute Page/styles.css
+++ b/Responsive Web Design/Tribute Page/styles.css
@@ -47,6 +47,11 @@ figure {
     background-color: #fff;
 }
 
+img {
+    display: block;
+    margin: 0 auto;
+}
+
 #image {
     width: 1000px;
     max-width: 100%;
