--- a/Responsive Web Design/Technical Documentation Page/styles.css
+++ b/Responsive Web Design/Technical Documentation Page/styles.css
@@ -10,6 +10,10 @@ header {
     font-size: 1.8em;
 }
 
+#main-doc {
+    position: absolute;
+}
+
 #main-doc header {
     margin-top: 16px;
 }
@@ -18,15 +22,35 @@ header {
     margin-top: 0;
 }
 
+#navbar {
+    top: 0;
+    left: 0;
+    border-color: rgba(0, 22, 22, 0.4);
+    border-width: 2px;
+    overflow-y: auto;
+}
+
 #navbar a {
     color: #4d4e53;
     text-decoration: none;
     width: 100%;
     height: 100%;
+    font-size: 1.2em;
 }
 
 #navbar ul {
     list-style-type: none;
+    padding: 0;
+}
+
+#navbar li {
+    display: flex;
+    position: relative;
+    border-top: solid;
+    border-color: rgba(0, 22, 22, 0.4);
+    width: 100%;
+    height: 40px;
+    border-width: 2px;
 }
 
 h1 {
@@ -47,14 +71,9 @@ span {
 @media (min-width: 1024px) {
     #navbar {
         position: fixed;
-        top: 0;
-        left: 0;
         height: 100vh;
         width: 350px;
         border-right: solid;
-        border-color: rgba(0, 22, 22, 0.4);
-        border-width: 2px;
-        overflow-y: auto;
     }
 
     #navbar header {
@@ -63,77 +82,47 @@ span {
 
     #navbar a {
         padding-left: 25px;
-        font-size: 1.2em;
-        width: 100%;
-        height: 100%;
         padding-top: 6px;
     }
 
-    #navbar ul {
-        padding: 0;
-    }
-
-    #navbar li {
-        border-top: solid;
-        border-color: rgba(0, 22, 22, 0.4);
-        position: relative;
-        width: 100%;
-        height: 40px;
-        display: flex;
-        border-width: 2px;
-    }
-
     #main-doc {
-        position: absolute;
         margin-left: 360px;
         padding: 20px;
     }
 }
 
-/*
-#navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 350px;
-    border-right: solid;
-    border-color: rgba(0, 22, 22, 0.4);
-    border-width: 2px;
-}
+@media (max-width: 1023px) {
+    #navbar {
+        position: absolute;
+        height: 25%;
+        width: 100%;
+        border-bottom: solid;
+    }
 
-#navbar header {
-    padding: 10px 16px;
-}
+    #navbar header {
+        display: flex;
+        height: 45px;
+        width: 100%;
+        padding-top: 16px;
+        justify-content: center;
+        white-space: nowrap;
+    } 
 
-#navbar a {
-    color: #4d4e53;
-    text-decoration: none;
-    padding-left: 25px;
-    font-size: 1.2em;
-    width: 100%;
-    height: 100%;
-    padding-top: 6px;
-}
+    #navbar a {
+        padding-left: 18px;
+        padding-top: 12px;
+    }
 
-#navbar ul {
-    list-style-type: none;
-    padding: 0;
-}
+    #navbar ul {
+        margin: 16px 0 0;
+    }
 
-#navbar li {
-    border-top: solid;
-    border-color: rgba(0, 22, 22, 0.4);
-    position: relative;
-    width: 100%;
-    height: 40px;
-    display: flex;
-    border-width: 2px;
-}
+    #navbar li {
+        align-items: center;
+    }
 
-#main-doc {
-    position: absolute;
-    margin-left: 360px;
-    padding: 20px;
+    #main-doc {
+        top: 25%;
+        padding: 10px;
+    }
 }
-*/
