--- a/Responsive Web Design/Personal Portfolio Page/styles.css
+++ b/Responsive Web Design/Personal Portfolio Page/styles.css
@@ -238,3 +238,51 @@ header::selection {
 section#about {
     border-bottom: 1px solid var(--color-turquoise-950); /* Section height // Remove later */
 }
+
+#projects {
+    min-height: 100vh;
+    width: 100%;
+    background-color: #ffffff;
+    padding: 48px;
+}
+
+#projects h1 {
+    display: flex;
+    justify-content: center;
+    margin: 12px auto 60px;
+}
+
+.projects-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1em;
+}
+
+.project-tile {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: inherit;
+    border: 1px solid #eee;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.project-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    display: block;
+}
+
+.project-title {
+    padding: 1em;
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+section#projects {
+    border-bottom: 1px solid var(--color-turquoise-950); /* Section height // Remove later */
+}
