--- a/Responsive Web Design/Personal Portfolio Page/styles.css
+++ b/Responsive Web Design/Personal Portfolio Page/styles.css
@@ -47,20 +47,18 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-/* Welcome Section */
-
-#welcome-section {
-    height: 100vh;
-    width: 100%;
-    background-color: #ffffff;
-}
+/* navbar */
 
 #navbar {
-    height: 8%;
+    min-height: 8vh;
+    max-height: 12vh;
     width: 100%;
     background-color: var(--color-turquoise-400);
     background-image: linear-gradient(45deg, var(--color-turquoise-400) 0%, var(--color-aquamarine-200) 60%);
     position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #navbar ul {
@@ -88,8 +86,17 @@ body {
     display: flex;
 }
 
+/* Welcome Section */
+
+#welcome-section {
+    min-height: 100vh;
+    width: 100%;
+    background-color: #ffffff;
+    display: flex;
+    padding: 8vh 12px 12px;
+}
+
 header {
-    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -183,7 +190,7 @@ header::selection, #projects::selection {
 /* About Section */
 
 #about {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-color: #ffffff;
     background-image: linear-gradient(55deg, var(--color-aquamarine-300) 0%, var(--color-turquoise-200) 50%, var(--color-aquamarine-400) 95%);
@@ -289,7 +296,7 @@ p {
 /* Contact Section */
 
 #contact {
-    height: 90vh;
+    min-height: 90vh;
     width: 100%;
     background-color: #ffffff;
     background-image: linear-gradient(55deg, var(--color-aquamarine-300) 0%, var(--color-turquoise-200) 50%, var(--color-aquamarine-400) 95%);
@@ -316,7 +323,7 @@ p {
     display: flex;
     width: 100%;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     gap: 4em;
 }
 
@@ -335,7 +342,13 @@ p {
     margin: 8px;
 }
 
-@media only screen and (max-width: 1800px) {
+@media only screen and (max-width: 1200px) {
+    /* navbar */
+    #navbar li {
+        margin: 10px 20px;
+        font-size: 1.2em;
+    }
+
     /* Welcome Section */
     h1 {
         font-size: 2.5em;
@@ -343,365 +356,63 @@ p {
 
     h2 {
         font-size: 1.8em;
-        margin: 15px auto 5px;
+    }
+
+    #welcome-section h2 {
+        margin: 12px auto 0;
     }
 
     h3 {
-        font-size: 1.3em;
+        font-size: 1.4em;
     }
 
     .skills li {
-        font-size: 0.9em;
-    }
-
-    .skills {
-        margin: 10px auto;
-    }
-
-    .vertical {
-        margin: 8px;
-    }
-
-    /* About Section */
-    #about h1 {
-        margin: 30px;
-    }
-
-    p {
-        font-size: 1.1em;
-        margin: 10px;
-    }
-
-    /* Projects Section */
-    #projects h1 {
-        letter-spacing: -2px;
-        margin: 10px auto 45px;
-    }
-
-    /* Contact Section */
-    #contact h2 {
-        font-size: 1.3em;
-        letter-spacing: -2px;
-    }
-
-    #contact a {
-        font-size: 1.2em;
-    }
-
-    .icon {
-        width: 28px;
-        height: 28px;
-        margin: 6px;
-    }
-}
-
-@media only screen and (max-width: 1500px) {
-    /* Welcome Section */
-    #navbar a {
         font-size: 1em;
-    }
-
-    h1 {
-        font-size: 2em;
-    }
-
-    h2 {
-        font-size: 1.5em;
-        margin: 15px auto 5px;
-    }
-
-    h3 {
-        font-size: 1.1em;
-        margin: 5px auto;
-    }
-
-    .skills li {
-        font-size: 0.8em;
-    }
-
-    li.field {
-        margin: 0 auto;
-    }
-
-    .vertical {
-        margin: 0 5px;
-        width: 0.05em;
     }
 
     /* About Section */
     #about {
-        padding: 20px;
-    }
-
-    #about h1 {
-        margin: 20px;
+        padding: 12px;
     }
 
     p {
-        font-size: 1em;
-    }
-
-    /* Projects Section */
-    #projects h1 {
-        margin: 8px auto 30px;
-    }
-
-    .project-title {
-        font-size: 1.3em;
-        padding: 0.7em;
-    }
-
-    /* Contact Section */
-    #contact h2 {
         font-size: 1.2em;
     }
 
-    #contact a {
-        font-size: 1.1em;
-    }
-
-    .icon {
-        width: 26px;
-        height: 26px;
-        margin: 6px;
-    }
-}
-
-@media only screen and (max-width: 1200px) {
-    /* Welcome Section */
-    #navbar a {
-        font-size: 0.6em;
-    }
-
-    h1 {
-        font-size: 1.6em;
-    }
-
-    h2 {
-        font-size: 1.2em;
-        letter-spacing: -1px;
-        margin: 5px auto 1px;
-    }
-
-    h3 {
-        font-size: 0.9em;
-    }
-
-    .skills li {
-        font-size: 0.7em;
-        margin: 3px;
-    }
-
-    .skills {
-        margin: 5px auto;
-    }
-
-    .skills ul {
-        padding-left: 10px;
-    }
-
-    .vertical {
-        width: 0.005em;
-    }
-
-    /* About Section */
-    #about h1 {
-        margin: 5px;
-    }
-
-    p {
-        font-size: 0.7em;
-        margin: 2px;
-    }
-
     /* Projects Section */
+    #projects {
+        padding: 24px;
+    }
+
     #projects h1 {
-        letter-spacing: -1px;
-        margin: 6px auto 25px;
-    }
-
-    .projects-wrapper {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    }
-
-    .project-title {
-        font-size: 1.2em;
-        padding: 0.5em;
-    }
-
-    /* Contact Section */
-    #contact h2 {
-        font-size: 1.1em;
-        margin: 10px auto 30px;
-    }
-
-    #contact a {
-        font-size: 0.9em;
-    }
-
-    .icon {
-        width: 18px;
-        height: 18px;
-        margin: 3px;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-    /* Projects Section */
-    #projects h1 {
-        margin: 5px auto 20px;
+        margin: 12px auto 24px;
     }
 
     .projects-wrapper {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 10px;
     }
 
     .project-title {
-        font-size: 0.9em;
-        padding: 0.3em;
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    /* Welcome Section */
-    #navbar a {
-        font-size: 0.4em;
-    }
-
-    h1 {
         font-size: 1.2em;
     }
 
-    h2 {
-        font-size: 0.8em;
-    }
-
-    h3 {
-        font-size: 0.6em;
-    }
-
-    .skills li {
-        font-size: 0.5em;
-        margin: 2px;
-    }
-
-    .skills li:nth-last-of-type(1) {
-        margin-bottom: 0;
-    }
-
-    .vertical {
-        margin: 5px;
-    }
-
-    .skills ul {
-        padding-left: 5px;
-    }
-
-    .skills {
-        margin: 2px auto;
-    }
-
-    /* About Section */    
-    #about h1 {
-        margin: 2px;
-    }
-
-    p {
-        letter-spacing: -0.8px;
-        font-size: 0.5em;
-    }
-
-    /* Projects Section */
-    #projects h1 {
-        margin: 5px auto 10px;
-    }
-
-    .projects-wrapper {
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        gap: 8px;
-    }
-
-    .project-title {
-        font-size: 0.7em;
-    }
-
     /* Contact Section */
-    #contact h2 {
-        font-size: 0.7em;
-        letter-spacing: -1px;
-        margin: 10px auto 30px;
+    #contact {
+        padding: 12px;
     }
 
     #contact a {
-        font-size: 0.7em;
-    }
-
-    .icon {
-        width: 12px;
-        height: 12px;
-        margin: 2px;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    /* Welcome Section */
-    #navbar a {
-        font-size: 0.3em;
-    }
-
-    h1 {
         font-size: 1em;
-        letter-spacing: -1px;
     }
 
-    h2 {
-        font-size: 0.7em;
-        margin: 1px;
-    }
-
-    h3 {
-        font-size: 0.5em;
-    }
-
-    .skills li {
-        font-size: 0.3em;
-        margin: 2px;
-    }
-
-    .skills li:nth-last-of-type(1) {
-        margin-bottom: 0;
-    }
-
-    /* About Section */
-    p {
-        margin: 1px;
-        font-size: 0.4em;
-        letter-spacing: -0.6px;
-    }
-
-    /* Projects Section */
-    .projects-wrapper {
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-        gap: 5px;
-    }
-
-    .project-title {
-        font-size: 0.5em;
-    }
-
-    /* Contact Section */
-    #contact h2 {
-        font-size: 0.6em;
-        margin: 10px auto 20px;
-    }
-
-    #contact a {
-        font-size: 0.5em;
+    .icons-container {
+        gap: 1em;
     }
 
     .icon {
-        width: 10px;
-        height: 10px;
+        width: 20px;
+        height: 20px;
         margin: 1px;
     }
 }
